deploy/test/backend/robot/robot-universal-hook-delivery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-universal-hook-delivery-ingress
  namespace: opengauss-backend-robot
spec:
  rules:
  - host: hook-delivery-opengauss.test.osinfra.cn
    http:
      paths:
      - path: /gitcode-hook
        pathType: Prefix
        backend:
          service:
            name: robot-universal-hook-delivery-service
            port:
              number: 8888
  ingressClassName: nginx
  tls:
  - hosts:
    - hook-delivery-opengauss.test.osinfra.cn
    secretName: test-osinfra-cn-tls
